--- a/fundooApp/templates/navbar.html
+++ b/fundooApp/templates/navbar.html
@@ -12,7 +12,7 @@
       <div class="search" ng-click="goToSearch();">
         <img src="images/baseline-search-24px.svg" class="searchimg">
         <span flex="5"></span>
-        <input type="text" style="border:0px none;outline:none;" placeholder="Search" ng-model="searchText" />
+        <input class="gb" type="text" style="border:0px none;outline:none;margin:-31px 0px 0px 28px;" placeholder="Search" ng-model="searchText" />
       </div>
     </md-list-item>
 
