--- a/fundooApp/css/style.css
+++ b/fundooApp/css/style.css
@@ -6,6 +6,19 @@ label{
   box-sizing: border-box;
   font-size: 14px;
 }
+.gb{
+background: transparent;
+    border: none;
+    font: normal 16px Roboto,sans-serif;
+    -webkit-font-variant-ligatures: none;
+    font-variant-ligatures: none;
+    height: 46px;
+    outline: none;
+    padding: 11px 16px 11px 16px;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box
+  }
 .pinDiv {
   visibility: hidden;
   position: absolute;
@@ -26,7 +39,7 @@ label{
   height:350px;
 }
 .gb{
-background: transparent;
+
     border: none;
     font: normal 16px Roboto,sans-serif;
     -webkit-font-variant-ligatures: none;
@@ -37,6 +50,7 @@ background: transparent;
     width: 100%;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    background: transparent;
 }
 .tit1{
 padding-left: 10;
@@ -355,5 +369,5 @@ border-radius: 50%;
 }
 
 .searchimg{
-  margin-top: 10px;
+margin: 18px 0px 0px 6px
 }
