--- a/fundooApp/templates/search.html
+++ b/fundooApp/templates/search.html
@@ -1,7 +1,7 @@
-<div style="width:100%" layout="column" layout-align="center center">
+<div style="width:100%" layout="column" layout-align="center center" ng-init="getAllNote()">
 <div  id="sidenavId" style="width:70%" layout-align="center center">
 
-  <md-subheader ng-if="pinned.length > 0" style="margin-top:50px;"><strong style="margin-left:86px;"></strong> </md-subheader>
+  <md-subheader ng-if="pinned.length > 0" style="margin-top:50px;" ng-show="showPinedNote"><strong style="margin-left:86px;"></strong> </md-subheader>
   <div layout="row" layout-align="center center" layout-wrap data-ng-init="getAllNote()">
     <md-card  class="dashboard" style="background-color:{{note.color}};width:250px;position:relative" ng-repeat="note in notes |filter:{trash:false,pin:true,archive:false} |orderBy: '-notes':true |filter: searchText as pinned">
       <img ng-click="showAdvanced($event,note);" ng-src="{{note.image}}" class="md-card-image">
@@ -40,7 +40,7 @@
 
 
 
-    <md-subheader style="margin-left:86px;" id="header-btn" class="pinother" ><strong></strong> </md-subheader>
+    <md-subheader style="margin-left:86px;" id="header-btn" class="pinother" ng-if="showPinedNote && showOtherNote" ><strong></strong> </md-subheader>
   <div layout="row" layout-align="center center" layout-wrap data-ng-init="getAllNote()">
     <md-card class="dashboard" style="background-color:{{note.color}};width:250px;margin-top: 50px;position:relative" ng-repeat="note in notes |filter:{trash:false,pin:false,archive:false} |orderBy: '-notes':true |filter: searchText">
       <img ng-click="showAdvanced($event,note);" ng-src="{{note.image}}" class="md-card-image">
