--- a/fundooApp/templates/dashboard.html
+++ b/fundooApp/templates/dashboard.html
@@ -66,7 +66,7 @@
 
     <md-subheader style="margin-left:86px;" id="header-btn" class="pinother" ng-if="showPinedNote && showOtherNote" ><strong>Others</strong> </md-subheader>
   <div layout="row" layout-align="center center" layout-wrap data-ng-init="getAllNote()">
-    <md-card class="dashboard" style="background-color:{{note.color}};width:250px;margin-top: 50px;position:relative" ng-repeat="note in notes |filter:{trash:false,pin:false,archive:false} |orderBy: '-notes':true |filter: searchText">
+    <md-card class="dashboard" style="background-color:{{note.color}};width:250px;margin-top: 50px;position:relative;" ng-repeat="note in notes |filter:{trash:false,pin:false,archive:false} |orderBy: '-notes':true |filter: searchText">
       <img ng-click="showAdvanced($event,note);" ng-src="{{note.image}}" class="md-card-image">
       <div style="position:absolute;right:0%;border:0px;outline:none;" ng-click="updatePin(note)">
               <img ng-if="note.image===null && note.pin === false"  src="images/pin0.svg" style="padding-left: 225px;" >
@@ -74,7 +74,7 @@
                <md-tooltip>Pin Note</md-tooltip>
              </div>
 
-      <span ng-click="showAdvanced($event,note)">
+      <span ng-click="showAdvanced($event,note);">
           <div contenteditable class="dashOthr1"><strong>{{note.title}}</strong></div>
         </span>
 
@@ -97,7 +97,13 @@
           </md-chip>
         </md-chips>
       </div>
-      <div layout="row" ng-if="note.collaboratedUser" ng-repeat="user in note.collaboratedUser" style="width:40px;height:40px;border-radius:50px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; ">
+      <div layout="row" ng-if="collaborator.email===userInfo.email" ng-repeat="user in note.collaboratedUser" style="width:40px;height:40px;border-radius:50px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; ">
+        <div ng-repeat="user in note.collaboratedUser" style="">
+          <md-tooltip>{{user.emailId}}</md-tooltip>
+          <img src="{{user.profilepicImage}}" style="width:100%;border-radius:50%" />
+        </div>
+      </div>
+      <div layout="row" ng-if="collaborator.email!==userInfo.email" ng-repeat="user in note.collaboratedUser" style="width:40px;height:40px;border-radius:50px;border: 1px solid rgba(0,0,0,.5); margin-top: 10px; ">
         <div ng-repeat="user in note.collaboratedUser" style="">
           <md-tooltip>{{user.emailId}}</md-tooltip>
           <img src="{{user.profilepicImage}}" style="width:100%;border-radius:50%" />
